Added Integer MAX_VALUE test case